// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PanelWrapper should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Title
        </div>
        <div
          class="ant-card-extra"
        >
          subTitle
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span>
        children
      </span>
    </div>
  </div>
</div>
`;

exports[`test PanelWrapper should match snapshot when loading is equal true 1`] = `
<div>
  <div
    class="ant-card ant-card-loading ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Title
        </div>
        <div
          class="ant-card-extra"
        >
          subTitle
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-active"
      >
        <div
          class="ant-skeleton-content"
        >
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width: 61%;"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test PanelWrapper should render error when error is not undefined 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Title
        </div>
        <div
          class="ant-card-extra"
        >
          subTitle
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span>
        error message
      </span>
    </div>
  </div>
</div>
`;
